--- a/.github/workflows/changelog.yml
+++ b/.github/workflows/changelog.yml
@@ -54,22 +54,14 @@ jobs:
 
             if [ $i -lt $((${#VERSIONS_ARRAY[@]} - 1)) ]; then
               PREV_COMMIT=${VERSIONS_ARRAY[$((i + 1))]##*:}
+              CHANGES=$(git log $PREV_COMMIT..$COMMIT --pretty=format:"- %s ([%h](https://github.com/fabriziosalmi/UglyFeed/commit/%H))")
             else
-              PREV_COMMIT=""
+              CHANGES=$(git log $COMMIT --pretty=format:"- %s ([%h](https://github.com/fabriziosalmi/UglyFeed/commit/%H))")
             fi
 
             MAIN_CHANGE=$(git log -1 --pretty=format:"**%s** ([%h](https://github.com/fabriziosalmi/UglyFeed/commit/%H))" $COMMIT)
             CHANGELOG+="## Version $VERSION - $CURRENT_DATE\n"
             CHANGELOG+="$MAIN_CHANGE\n"
-
-            if [ -n "$PREV_COMMIT" ]; then
-              # Include other commits between this and the previous setup.py commit
-              CHANGES=$(git log $PREV_COMMIT..$COMMIT --pretty=format:"- %s ([%h](https://github.com/fabriziosalmi/UglyFeed/commit/%H))" | tail -n +2)
-            else
-              # Include all commits down to the initial commit
-              CHANGES=$(git log $COMMIT --pretty=format:"- %s ([%h](https://github.com/fabriziosalmi/UglyFeed/commit/%H))")
-            fi
-
             CHANGELOG+="$CHANGES\n\n"
           done
 
